--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.42.1",
+        "react-intersection-observer": "^9.4.3",
         "superjson": "1.9.1",
         "zod": "^3.20.2"
     },
