--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@trpc/react-query": "^10.9.0",
         "@trpc/server": "^10.9.0",
         "clsx": "^1.2.1",
+        "cva": "npm:class-variance-authority@^0.4.0",
         "next": "13.1.6",
         "next-auth": "^4.19.0",
         "react": "18.2.0",
